# devindex-adk

./: .gitignore  README.md  agent_spec.md  env.template  pyproject.toml  requirements.txt  tutorial.md
agent/: __init__.py  agent.py  graph.py  main.py  run.py  state.py
agent/nodes/: __init__.py  check_cache.py  check_file_cache.py  compute_complexity.py  compute_hash.py  fetch_file_tree.py  fetch_files.py  fetch_metadata.py  list_files.py  persist.py  score_skills.py  select_files.py  validate_input.py  validate_scores.py
database/: README.md  RLS_GUIDE.md  SUPABASE_SETUP.md  __init__.py  db.py  init_db.py  logger.py  models.py  vector_utils.py  verify_setup.py
database/migrations/: 001_extensions.sql  002_profiles.sql  003_connected_repositories.sql  004_developer_skills.sql  005_runs.sql  006_repo_cache.sql  007_profile_embedding.sql  008_match_audit.sql  009_indexes.sql  010_functions.sql  011_fts_trigger.sql  011_skill_vocabulary.sql  _all_combined.sql  run_migrations.sh
models/: __init__.py  skill_vector.py
prompts/: scoring_v1.md
tests/: test_check_file_cache.py  test_github_tools.py  test_select_files.py
tools/: github.py  github_tools.py  logger.py  utils.py
utils/: db_utils.py  model.py  structure_output.py
