[project]
name = "test-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "eml-parser>=2.0.0",
    "google-adk>=1.0.0",
    "litellm>=1.68.0",
    "psycopg[binary]>=3.2.9",
    "python-magic>=0.4.27",
    "python-dotenv>=1.0.0",
    "pgvector>=0.3.0",
    "sqlalchemy>=2.0.40",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]


[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
